--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:52:58 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:53:41 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-12</td>
       <td>Dustin Johnson(W) -4
--1 thru 5</td>
+-1 thru 6</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
@@ -261,7 +261,7 @@ Not started</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
       <td>Matthew Fitzpatrick E
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
       <td class="greyout">Xander Schauffele +3
@@ -341,7 +341,7 @@ Not started</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
       <td>Rory McIlroy E
--1 thru 3</td>
+-1 thru 4</td>
       <td class="greyout leftborder">Jon Rahm +1
 -1 thru 5</td>
       <td class="greyout">Robert MacIntyre +3
@@ -383,7 +383,7 @@ Not started</td>
       <td class="bigbold">CRED</td>
       <td class="bigbold">-6</td>
       <td>Dustin Johnson -4
--1 thru 5</td>
+-1 thru 6</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -1
@@ -499,7 +499,7 @@ Not started</td>
       <td>Tiger Woods -1
 Not started</td>
       <td>Rory McIlroy(W) E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +3
@@ -511,33 +511,17 @@ Not started</td>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">-4</td>
       <td>Dustin Johnson -4
--1 thru 5</td>
+-1 thru 6</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
       <td>Rory McIlroy(W) E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 4</td>
       <td class="greyout">Jordan Spieth +2
 E thru 4</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--1 thru 10</td>
-      <td>Will Zalatoris -1
-E thru 5</td>
-      <td>Rory McIlroy E
--1 thru 3</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout">Xander Schauffele(W) +3
-+1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -547,7 +531,7 @@ Not started</td>
       <td>Will Zalatoris -1
 E thru 5</td>
       <td>Matthew Fitzpatrick E
-+1 thru 3</td>
++1 thru 4</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -563,7 +547,7 @@ Not started</td>
       <td>Bubba Watson -1
 -2 thru 8</td>
       <td>Rory McIlroy E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm(W) +1
 -1 thru 5</td>
       <td class="greyout leftborder">Viktor Hovland +2
@@ -575,33 +559,17 @@ E thru 4</td>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-4</td>
       <td>Dustin Johnson(W) -4
--1 thru 5</td>
+-1 thru 6</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Matthew Fitzpatrick E
-+1 thru 3</td>
++1 thru 4</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 4</td>
       <td class="greyout">Louis Oosthuizen +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-3</td>
-      <td>Corey Conners(W) -3
--1 thru 10</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout">Robert MacIntyre +3
-+2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -618,6 +586,22 @@ E thru 4</td>
 +1 thru 4</td>
       <td class="greyout">Sam Burns +5
 +2 thru 6</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -3
+-1 thru 10</td>
+      <td>Will Zalatoris -1
+E thru 5</td>
+      <td>Rory McIlroy E
+-1 thru 4</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout">Xander Schauffele(W) +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -659,7 +643,7 @@ Not started</td>
       <td>Will Zalatoris -1
 E thru 5</td>
       <td>Rory McIlroy E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -707,7 +691,7 @@ Not started</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
       <td>Rory McIlroy E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Viktor Hovland +2
 +2 thru 4</td>
       <td class="greyout leftborder">Xander Schauffele +3
@@ -716,20 +700,20 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-2</td>
-      <td>Tiger Woods(W) -1
+      <td>Corey Conners(W) -3
+-1 thru 10</td>
+      <td>Daniel Berger -1
 Not started</td>
-      <td>Will Zalatoris -1
-E thru 5</td>
-      <td>Rory McIlroy E
--1 thru 3</td>
-      <td>Collin Morikawa E
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td>Jon Rahm +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout">Robert MacIntyre +3
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -751,7 +735,7 @@ Not started</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-2</td>
       <td>Dustin Johnson -4
--1 thru 5</td>
+-1 thru 6</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
       <td>Jon Rahm +1
@@ -764,20 +748,20 @@ E thru 4</td>
 E thru 4</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
+      <td>Tiger Woods(W) -1
+Not started</td>
       <td>Will Zalatoris -1
 E thru 5</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +2
+      <td>Rory McIlroy E
+-1 thru 4</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 4</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -796,36 +780,20 @@ E thru 4</td>
 +2 thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Jon Rahm(W) +1
--1 thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 4</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">Walk 1</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
-      <td>Collin Morikawa(W) E
--1 thru 5</td>
-      <td>Hideki Matsuyama E
-Not started</td>
+      <td>Will Zalatoris -1
+E thru 5</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +2
++2 thru 4</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
@@ -833,7 +801,7 @@ Out With Injury</td>
       <td>Corey Conners -3
 -1 thru 10</td>
       <td>Rory McIlroy E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm(W) +1
 -1 thru 5</td>
       <td>Jordan Spieth +2
@@ -849,7 +817,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Rory McIlroy E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm(W) +1
 -1 thru 5</td>
       <td>Viktor Hovland +2
@@ -858,6 +826,38 @@ Not started</td>
 E thru 4</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 5</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">1</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Collin Morikawa(W) +1
+E thru 6</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -892,22 +892,6 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">1</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Collin Morikawa(W) E
--1 thru 5</td>
-      <td>Rory McIlroy E
--1 thru 3</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Gary Woodland +4
-+1 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">2</td>
       <td>Scottie Scheffler -3
@@ -940,6 +924,22 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">2</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Rory McIlroy E
+-1 thru 4</td>
+      <td>Collin Morikawa(W) +1
+E thru 6</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +4
++1 thru 10</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wylie</td>
       <td class="bigbold">2</td>
       <td>Scottie Scheffler -3
@@ -961,7 +961,7 @@ Not started</td>
       <td>Patrick Cantlay(W) -1
 +1 thru 5</td>
       <td>Rory McIlroy E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
       <td>Brooks Koepka +3
@@ -977,7 +977,7 @@ Not started</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Rory McIlroy E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Xander Schauffele +3
 +1 thru 4</td>
       <td>Justin Thomas(W) +4
@@ -1004,38 +1004,6 @@ Not started</td>
 +2 thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">4</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td>Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
-      <td>Patrick Reed +1
--1 thru 9</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 4</td>
-    </tr>
-    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">4</td>
       <td>Will Zalatoris -1
@@ -1050,6 +1018,38 @@ E thru 4</td>
 E thru 4</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">5</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td>Jordan Spieth +2
+E thru 4</td>
+      <td>Brooks Koepka +3
+E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">5</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
+      <td>Patrick Reed +1
+-1 thru 9</td>
+      <td>Viktor Hovland(W) +2
++2 thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
