--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:52:58 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:53:41 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Rory McIlroy E
--1 thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 4</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -4
@@ -195,7 +179,7 @@ Not started</td>
       <td>Joaquin Niemann -3
 Not started</td>
       <td>Rory McIlroy E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Viktor Hovland +2
 +2 thru 4</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
@@ -220,20 +204,20 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">John Nixon</td>
       <td class="bigbold">-4</td>
-      <td>Sungjae Im -5
-E thru 7</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 4</td>
+      <td>Rory McIlroy E
+-1 thru 4</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -243,7 +227,7 @@ Not started</td>
       <td>Will Zalatoris -1
 E thru 5</td>
       <td>Matthew Fitzpatrick E
-+1 thru 3</td>
++1 thru 4</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -252,36 +236,20 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-3</td>
-      <td>Will Zalatoris -1
-E thru 5</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
+      <td>Sungjae Im -5
+E thru 7</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td>Viktor Hovland(W) +2
++2 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout">Justin Thomas +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-3</td>
-      <td>Corey Conners(W) -3
--1 thru 10</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout">Robert MacIntyre +3
-+2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -316,10 +284,42 @@ E thru 4</td>
 E thru 4</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-2</td>
+      <td>Will Zalatoris -1
+E thru 5</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-2</td>
+      <td>Corey Conners(W) -3
+-1 thru 10</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout">Robert MacIntyre +3
++2 thru 11</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-2</td>
       <td>Dustin Johnson -4
--1 thru 5</td>
+-1 thru 6</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
       <td>Jon Rahm +1
@@ -332,26 +332,10 @@ E thru 4</td>
 E thru 4</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
-      <td>Jon Rahm(W) +1
--1 thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 4</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">0</td>
       <td>Dustin Johnson -4
--1 thru 5</td>
+-1 thru 6</td>
       <td>Corey Conners -3
 -1 thru 10</td>
       <td>Xander Schauffele(W) +3
@@ -362,6 +346,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Russell Henley +4
 +3 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 5</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 4</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -381,11 +381,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa E
--1 thru 5</td>
+      <td class="bigbold">5</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
       <td>Patrick Reed +1
 -1 thru 9</td>
       <td>Viktor Hovland(W) +2
