--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:00:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:00:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -262,8 +262,8 @@ Not started</td>
 E thru 5</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 4</td>
     </tr>
@@ -310,8 +310,8 @@ Not started</td>
 E thru 5</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
       <td class="greyout">Brooks Koepka +3
 E thru 4</td>
     </tr>
@@ -406,8 +406,8 @@ Not started</td>
 E thru 5</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 4</td>
     </tr>
@@ -518,10 +518,26 @@ Not started</td>
 -1 thru 4</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +2
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
+      <td class="greyout">Viktor Hovland +2
 +2 thru 4</td>
-      <td class="greyout">Jordan Spieth +2
-E thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 10</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -550,10 +566,10 @@ Not started</td>
 -1 thru 4</td>
       <td>Jon Rahm(W) +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +2
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
+      <td class="greyout">Viktor Hovland +2
 +2 thru 4</td>
-      <td class="greyout">Jordan Spieth +2
-E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -566,9 +582,25 @@ Not started</td>
 +1 thru 4</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
       <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-4</td>
+      <td>Corey Conners -3
+-1 thru 10</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -604,22 +636,6 @@ E thru 6</td>
 +1 thru 4</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 10</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -4
@@ -652,20 +668,20 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-3</td>
-      <td>Corey Conners -3
--1 thru 10</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td>Jordan Spieth +2
+      <td>Dustin Johnson -4
+-1 thru 6</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Jordan Spieth(W) +1
+-1 thru 5</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -710,10 +726,10 @@ Not started</td>
 E thru 6</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
+      <td class="greyout">Robert MacIntyre +2
 +1 thru 12</td>
-      <td class="greyout">Jordan Spieth +2
-E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -732,20 +748,36 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">Neville Spillman</td>
       <td class="bigbold">-2</td>
-      <td>Dustin Johnson -4
--1 thru 6</td>
+      <td>Scottie Scheffler -3
+Not started</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
+      <td>Jordan Spieth(W) +1
+-1 thru 5</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td>Jordan Spieth(W) +2
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 4</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -3
+-1 thru 10</td>
+      <td>Rory McIlroy E
+-1 thru 4</td>
+      <td>Jon Rahm(W) +1
+-1 thru 5</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -764,22 +796,6 @@ E thru 6</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
-      <td>Jordan Spieth(W) +2
-E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -1
@@ -796,19 +812,19 @@ E thru 6</td>
 +1 thru 4</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Philip Dale</td>
       <td class="bigbold">0</td>
-      <td>Corey Conners -3
--1 thru 10</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Jon Rahm(W) +1
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Jordan Spieth +1
 -1 thru 5</td>
-      <td>Jordan Spieth +2
+      <td>Brooks Koepka +3
 E thru 4</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 4</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -838,8 +854,8 @@ Not started</td>
 -1 thru 5</td>
       <td>Collin Morikawa +1
 E thru 6</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
       <td class="greyout">Brooks Koepka +3
 E thru 4</td>
     </tr>
@@ -854,8 +870,8 @@ Not started</td>
 E thru 6</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
@@ -876,32 +892,16 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td>Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 5</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
       <td>Viktor Hovland +2
 +2 thru 4</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
       <td class="greyout">Xander Schauffele +3
@@ -909,15 +909,15 @@ E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 5</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
       <td class="greyout">Justin Thomas +4
@@ -956,6 +956,38 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">3</td>
+      <td>Will Zalatoris -1
+E thru 5</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">3</td>
+      <td>Will Zalatoris -1
+E thru 5</td>
+      <td>Jon Rahm(W) +1
+-1 thru 5</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">3</td>
       <td>Patrick Cantlay(W) -1
@@ -982,52 +1014,20 @@ Not started</td>
 +1 thru 4</td>
       <td>Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout leftborder">Justin Rose +5
-+1 thru 10</td>
-      <td class="greyout">Sam Burns +6
+      <td class="greyout leftborder">Sam Burns +6
 +3 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">4</td>
-      <td>Will Zalatoris -1
-E thru 5</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">4</td>
-      <td>Will Zalatoris -1
-E thru 5</td>
-      <td>Jon Rahm(W) +1
--1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
+      <td class="greyout">Justin Rose +8
++4 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Patrick Cantlay -1
 +1 thru 5</td>
       <td>Collin Morikawa +1
 E thru 6</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
       <td>Brooks Koepka +3
 E thru 4</td>
       <td class="greyout leftborder">Xander Schauffele +3
@@ -1037,29 +1037,29 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Collin Morikawa +1
 E thru 6</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
       <td>Patrick Reed +1
 -1 thru 9</td>
-      <td>Viktor Hovland(W) +2
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +2
 +2 thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
       <td class="greyout">Brooks Koepka +3
 E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Jon Rahm +1
+-1 thru 5</td>
+      <td>Jordan Spieth +1
 -1 thru 5</td>
       <td>Viktor Hovland +2
 +2 thru 4</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
       <td>Brooks Koepka +3
 E thru 4</td>
       <td class="greyout leftborder">Xander Schauffele +3
@@ -1069,13 +1069,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Jon Rahm +1
+-1 thru 5</td>
+      <td>Jordan Spieth +1
 -1 thru 5</td>
       <td>Viktor Hovland +2
 +2 thru 4</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
       <td>Xander Schauffele +3
 +1 thru 4</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
