--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:00:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:00:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -3
 -1 thru 10</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 4</td>
       <td class="greyout">Sam Burns +6
@@ -220,6 +220,22 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 10</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td>Viktor Hovland +2
++2 thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners -3
@@ -252,20 +268,20 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 10</td>
-      <td>Viktor Hovland +2
+      <td>Dustin Johnson -4
+-1 thru 6</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Jordan Spieth(W) +1
+-1 thru 5</td>
+      <td>Jon Rahm +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 4</td>
-      <td>Jordan Spieth +2
+      <td class="greyout">Brooks Koepka +3
 E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -276,10 +292,10 @@ Not started</td>
 E thru 5</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td>Shane Lowry +1
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
       <td class="greyout">Brooks Koepka +3
 E thru 4</td>
     </tr>
@@ -310,26 +326,10 @@ Not started</td>
 E thru 6</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
       <td class="greyout">Robert MacIntyre +2
 +1 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -4
--1 thru 6</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
-      <td>Jordan Spieth(W) +2
-E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -358,20 +358,20 @@ Not started</td>
 -1 thru 5</td>
       <td>Collin Morikawa +1
 E thru 6</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 5</td>
       <td class="greyout">Brooks Koepka +3
 E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -3
 -1 thru 10</td>
       <td>Jon Rahm +1
 -1 thru 5</td>
-      <td>Jordan Spieth +2
-E thru 4</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
       <td>Xander Schauffele +3
 +1 thru 4</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
